--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ohook",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-beta.1",
   "description": "oh hook !",
   "scripts": {
     "prepare": "husky install",
